welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: not found: value T
		if(T(i+1)=T(i)+1) {
                   ^